{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 25,
  "lineage": "a72f0853-70e3-eb8d-a251-2f408d1090bd",
  "resources": [
    {
      "module": "module.module_dev",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ni1",
      "provider": "module.module_dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/devresource/providers/Microsoft.Network/networkInterfaces/dev-ninter",
            "internal_domain_name_suffix": "zm5enuwu3hpexorrjtozen4qld.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/devresource/providers/Microsoft.Network/virtualNetworks/dev-1/subnets/dev-10"
              }
            ],
            "location": "eastus",
            "name": "dev-ninter",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "devresource"
          },
          "dependencies": [
            "module.module_dev.azurerm_resource_group.rg1",
            "module.module_dev.azurerm_subnet.subnet1",
            "module.module_dev.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_dev",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "module.module_dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/devresource/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1",
            "location": "eastus",
            "name": "dev-nsg1",
            "resource_group_name": "devresource",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_dev.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.module_dev",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr1",
      "provider": "module.module_dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/devresource/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1/securityRules/practice6",
            "name": "practice6",
            "network_security_group_name": "dev-nsg1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "devresource",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_dev.azurerm_network_security_group.nsg1",
            "module.module_dev.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.module_dev",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "module.module_dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/devresource/providers/Microsoft.Network/virtualNetworks/dev-1/subnets/dev-10",
            "name": "dev-10",
            "resource_group_name": "devresource",
            "virtual_network_name": "dev-1"
          },
          "dependencies": [
            "module.module_dev.azurerm_resource_group.rg1",
            "module.module_dev.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_dev",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsga1",
      "provider": "module.module_dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/devresource/providers/Microsoft.Network/virtualNetworks/dev-1/subnets/dev-10",
            "network_security_group_id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/devresource/providers/Microsoft.Network/networkSecurityGroups/dev-nsg1",
            "subnet_id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/devresource/providers/Microsoft.Network/virtualNetworks/dev-1/subnets/dev-10"
          },
          "dependencies": [
            "module.module_dev.azurerm_network_security_group.nsg1",
            "module.module_dev.azurerm_resource_group.rg1",
            "module.module_dev.azurerm_subnet.subnet1",
            "module.module_dev.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_dev",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "module.module_dev.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d2463ecb-e9d4-4bde-ba31-4cdd9237d05b",
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/devresource/providers/Microsoft.Network/virtualNetworks/dev-1",
            "location": "eastus",
            "name": "dev-1",
            "resource_group_name": "devresource"
          },
          "dependencies": [
            "module.module_dev.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.module_qa",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ni1",
      "provider": "module.module_qa.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/qa1/providers/Microsoft.Network/networkInterfaces/qa-ninter",
            "internal_domain_name_suffix": "vzle1bj2vbcedoqwuzslowtbdf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.30.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/qa1/providers/Microsoft.Network/virtualNetworks/qa-1/subnets/qa-10"
              }
            ],
            "location": "eastus",
            "name": "qa-ninter",
            "private_ip_address": "10.30.1.4",
            "private_ip_addresses": [
              "10.30.1.4"
            ],
            "resource_group_name": "qa1"
          },
          "dependencies": [
            "module.module_qa.azurerm_resource_group.rg1",
            "module.module_qa.azurerm_subnet.subnet1",
            "module.module_qa.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_qa",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "module.module_qa.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/qa1/providers/Microsoft.Network/networkSecurityGroups/qa-nsg1",
            "location": "eastus",
            "name": "qa-nsg1",
            "resource_group_name": "qa1",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_qa.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.module_qa",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr1",
      "provider": "module.module_qa.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/qa1/providers/Microsoft.Network/networkSecurityGroups/qa-nsg1/securityRules/practice6",
            "name": "practice6",
            "network_security_group_name": "qa-nsg1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "qa1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_qa.azurerm_network_security_group.nsg1",
            "module.module_qa.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.module_qa",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "module.module_qa.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.30.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/qa1/providers/Microsoft.Network/virtualNetworks/qa-1/subnets/qa-10",
            "name": "qa-10",
            "resource_group_name": "qa1",
            "virtual_network_name": "qa-1"
          },
          "dependencies": [
            "module.module_qa.azurerm_resource_group.rg1",
            "module.module_qa.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_qa",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsga1",
      "provider": "module.module_qa.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/qa1/providers/Microsoft.Network/virtualNetworks/qa-1/subnets/qa-10",
            "network_security_group_id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/qa1/providers/Microsoft.Network/networkSecurityGroups/qa-nsg1",
            "subnet_id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/qa1/providers/Microsoft.Network/virtualNetworks/qa-1/subnets/qa-10"
          },
          "dependencies": [
            "module.module_qa.azurerm_network_security_group.nsg1",
            "module.module_qa.azurerm_resource_group.rg1",
            "module.module_qa.azurerm_subnet.subnet1",
            "module.module_qa.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_qa",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "module.module_qa.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.30.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "854d56ae-a83c-4144-ba16-a664b75a611d",
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/qa1/providers/Microsoft.Network/virtualNetworks/qa-1",
            "location": "eastus",
            "name": "qa-1",
            "resource_group_name": "qa1"
          },
          "dependencies": [
            "module.module_qa.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.module_stg",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ni1",
      "provider": "module.module_stg.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/stg1/providers/Microsoft.Network/networkInterfaces/stg-ninter",
            "internal_domain_name_suffix": "2fgohhxco0eu3gx4jjrb0knp3a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.20.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/stg1/providers/Microsoft.Network/virtualNetworks/stg-1/subnets/stg-10"
              }
            ],
            "location": "eastus",
            "name": "stg-ninter",
            "private_ip_address": "10.20.1.4",
            "private_ip_addresses": [
              "10.20.1.4"
            ],
            "resource_group_name": "stg1"
          },
          "dependencies": [
            "module.module_stg.azurerm_resource_group.rg1",
            "module.module_stg.azurerm_subnet.subnet1",
            "module.module_stg.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_stg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "module.module_stg.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/stg1/providers/Microsoft.Network/networkSecurityGroups/stg-nsg1",
            "location": "eastus",
            "name": "stg-nsg1",
            "resource_group_name": "stg1",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_stg.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.module_stg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsr1",
      "provider": "module.module_stg.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/stg1/providers/Microsoft.Network/networkSecurityGroups/stg-nsg1/securityRules/practice6",
            "name": "practice6",
            "network_security_group_name": "stg-nsg1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "stg1",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_stg.azurerm_network_security_group.nsg1",
            "module.module_stg.azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "module": "module.module_stg",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "module.module_stg.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.20.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/stg1/providers/Microsoft.Network/virtualNetworks/stg-1/subnets/stg-10",
            "name": "stg-10",
            "resource_group_name": "stg1",
            "virtual_network_name": "stg-1"
          },
          "dependencies": [
            "module.module_stg.azurerm_resource_group.rg1",
            "module.module_stg.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_stg",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsga1",
      "provider": "module.module_stg.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/stg1/providers/Microsoft.Network/virtualNetworks/stg-1/subnets/stg-10",
            "network_security_group_id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/stg1/providers/Microsoft.Network/networkSecurityGroups/stg-nsg1",
            "subnet_id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/stg1/providers/Microsoft.Network/virtualNetworks/stg-1/subnets/stg-10"
          },
          "dependencies": [
            "module.module_stg.azurerm_network_security_group.nsg1",
            "module.module_stg.azurerm_resource_group.rg1",
            "module.module_stg.azurerm_subnet.subnet1",
            "module.module_stg.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.module_stg",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "module.module_stg.provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.20.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9ee34ce1-76e2-4e89-9afe-4a621d29afe8",
            "id": "/subscriptions/9cf7d5a5-d86d-42c7-a771-9552939ab171/resourceGroups/stg1/providers/Microsoft.Network/virtualNetworks/stg-1",
            "location": "eastus",
            "name": "stg-1",
            "resource_group_name": "stg1"
          },
          "dependencies": [
            "module.module_stg.azurerm_resource_group.rg1"
          ]
        }
      ]
    }
  ]
}